# blueengine_nscriptv3

./: Cargo.toml  settings.nc  test.nc
assets/: forrestmap  testmap.txt  tmpmap
assets/coin/: sprite.cfg
assets/draakje/: sprite.cfg
assets/dude1/: sprite.cfg
assets/gem_pink/: sprite.cfg
assets/meisje/: sprite.cfg
assets/models/: grass  mud  street  tree
assets/oogbal/: sprite.cfg
assets/qbox/: sprite.cfg
assets/tekendude/: sprite.cfg
assets/tree/: sprite.cfg
scripts/engine/: camera.nc  hud.nc  hud_1_0.nc  sprite.nc
scripts/world/: map.nc
src/: main.rs
src/inc/: bluenc_animation.rs  bluenc_batchedmodels.rs  bluenc_camera.rs  bluenc_hud.rs  bluenc_input.rs  bluenc_objects.rs  bluenc_textures.rs  engine.rs  nscriptfnbindings.rs
