[package]
name = "blueengine_nscriptv3"
version = "0.1.0"
edition = "2021"

[dependencies]
blue_engine = { version = "0.9.4" }
#blue_engine = { path = "/home/skorm/projects/BlueEngine_master" }
#blue_engine_utilities= { version = "0.9.4" , features=["egui"] }
#nscript_lib = { path = "/home/skorm/projects/Nscriptv3_lib" }
nscript_lib = { git = "https://github.com/NickJasonHagen/Nscriptv3_lib" }
nalgebra = "0.32.3"
rustc-serialize = "0.3"
cgmath = "0.18"
